Updated build.gradle from previous commit